--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.542.0",
+    "jose": "^5.9.6",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "radix-ui": "^1.4.3",
