--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.86.0",
     "@upstash/redis": "^1.35.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.542.0",
     "jose": "^5.9.6",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
     "radix-ui": "^1.4.3",
